Change to the header

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     
     <div class="container">
-        <div class="grid header">Header</div>
+        <div class="grid header">*Header*</div>
         <div class="grid hero">Hero</div>
         <div class="grid sidebar">Sidebar</div>
         <div class="grid content">Main Content
