--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="grid hero">Hero</div>
         <div class="grid sidebar">Sidebar</div>
         <div class="grid content">Main Content
-            <p>**If things do not look right, make sure your browser is in "Experimental Mode".</p>
+            <p>If things do not look right, make sure your browser is in "Experimental Mode".</p>
         </div>
         <div class="grid extra">Extra Content</div>
         <div class="grid related-images">Related Images</div>
